# FLAIR-and-NCCT-atlas-for-elderly

./: README.md
FLAIR-and-NCCT-atlas-for-elderly/atlas-generation/: multivariate-template-groupavg-flair-normalised.sh
FLAIR-and-NCCT-atlas-for-elderly/structure-preserving_interpolation/: README
FLAIR-and-NCCT-atlas-for-elderly/structure-preserving_interpolation/src/: CMakeLists.txt  imiRegistrationBasedInterpolationFilter.h  imiSliceInterpolationMain.cxx
atlas-generation/: multivariate-template-groupavg-ct-with-hu.sh
post-processing/: meshToImage.py
structure-preserving_interpolation/: LICENSE
structure-preserving_interpolation/src/: .project  imiImageFunctions.h  imiImageFunctions.hxx  imiMacro.h  imiRegistrationBasedInterpolationFilter.hxx  itkRoundAndCastImageFilter.h
structure-preserving_interpolation/src/tclap/include/tclap/: VectorValueArg.h
